--- a/renovate.json
+++ b/renovate.json
@@ -1,4 +1,5 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": ["github>CloudTooling/renovate-config"]
+  "extends": ["github>CloudTooling/renovate-config"],
+  "forkProcessing": "enabled"
 }
