chore: Fix build error
* beautify config json during release

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,7 +47,7 @@ jobs:
 
             -   name: Set version
                 run: |
-                    echo "{\"version\":\"${{ inputs.releaseversion }}\"}" > config.json
+                    echo "{\"version\":\"${{ inputs.releaseversion }}\"}" | jq  > config.json
 
             -   name: Build image
                 id: build-image
