tests: Adding test scripts
ref #OSS-20

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,7 @@ Desktop.ini
 
 # Build
 cloudtooling-data-anonymizer-latest_digest.txt
+# Test results
+testfiles/*.csv_anonymized
+testfiles/*.json_anonymized
+testfiles/*.xml_anonymized
