--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,6 +25,10 @@ jobs:
         id: install-deps
         run: |
           pip3 install -r requirements.txt
+      - name: Run tests
+        id: run-tests
+        run: |
+          .bin/tests.sh
   Container:
     name: Build Container Image
     runs-on: ubuntu-latest
